# dev-example-pybind11

./: .gitignore  CMakeLists.txt  setup.py
src/: example.cpp
tests/: test_example.py
